02/09/2013 Some fixes of the interface

05/08/2013 Options block in specifications

05/08/2013 Tableau blocks in specifications, generation and improved packaging of generated code

17/07/2013 Benchmark suite: problem analyser and multi-threaded benchmarking

25/04/2013 Fixed a bug in ALCO example

22/04/2013 A property for separators in generated names

03/04/2013 Verification of tableau calculus specifications

31/03/2013 Check for overwrite of generated files

04/02/2013 Intuitionistic logic case study

28/01/2013 Random expression generator with depth restrictions, variable names, and frequencies of connectives

23/11/2012 Fixed a bug with missed properties

22/11/2012 Fixed a bug with stringtemplate4 library

15/11/2012 Changed default equality keywords to "equality"
           Fixed a bug with LTLC tableau

09/11/2012 Added support for optional equality keywords

04/11/2012 Added support for ANTLR options in generated grammar files

20/06/2011 Integration of the tableau core with AST generation.

19/06/2011 Initial tableau core.

01/05/2011 Generation of AST for ANTLR grammar.

17/03/2011 ANTLR grammar generation. No AST.

11/08/2009 Initial tests with the grammar for the prover generator.