@@ -1,3 +1,5 @@
+09/09/2013 Option for specifying branch selection strategy
+
 02/09/2013 Some fixes of the interface
 
 05/08/2013 Options block in specifications
